[package]
name = "bevy_project_template"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remove this on release
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
rand = "0.8.5"
parry2d = "0.13.5"
# bevy = "0.11.2"
